--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -6,6 +6,7 @@
   <meta name="react-app" content="react-app">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="theme-color" content="#000000" />
+  <link href="https://fonts.googleapis.com/css?family=Bungee+Outline|Rajdhani&display=swap" rel="stylesheet">
   <title>React App</title>
   <style>
     /* http://meyerweb.com/eric/tools/css/reset/ 
